Cambio figura eficiencias NREL

--- a/libro/CelulaSolar.tex
+++ b/libro/CelulaSolar.tex
@@ -484,7 +484,7 @@ donde $P_{L}$ representa la potencia luminosa que incide en la célula.
 Como es evidente de la ecuación \ref{eq:EficienciaCelula}, este valor
 de eficiencia se corresponde al caso en el que el acoplamiento entre
 la carga y la célula permite a ésta trabajar en el punto de máxima
-potencia. En la figura \ref{fig:EvolucionEficienciaC=0000E9lulas}
+potencia. En la figura \ref{fig:EvolucionEficienciaCelulas}
 se muestra la evolución temporal del valor de eficiencia de célula
 de laboratorio para diferentes tecnologías. Las células industriales
 de silicio suelen ofrecer eficiencias comprendidas entre el 13\% y
@@ -492,8 +492,8 @@ el 17\%.
 
 %
 \begin{figure}
-\includegraphics[scale=0.35]{../figs/PVeff(rev110707)d}\caption{Evolución de la eficiencia de células según la tecnología (según el
-National Renewable Energy Laboratory (EEUU).\label{fig:EvolucionEficienciaC=0000E9lulas}}
+\includegraphics[scale=0.35]{../figs/efficiency_chart_nrel.jpg}\caption{Evolución de la eficiencia de células según la tecnología (según el
+National Renewable Energy Laboratory (EEUU).\label{fig:EvolucionEficienciaCelulas}}
 
 \end{figure}
 
