Matizo signo de ws, en contexto de otras publicaciones

--- a/libro/GeometriaSolar.tex
+++ b/libro/GeometriaSolar.tex
@@ -413,7 +413,7 @@ en dos localidades terrestres.\label{fig:DiagramaElevacionAcimutSolar}}
 Utilizando la ecuación \ref{eq:cosThetaZs} podemos calcular la hora
 solar correspondiente al amanecer y atardecer, situaciones caracterizadas
 por una altura solar nula. Por tanto, con $\theta_{zs}=90\degree$,
-el ángulo correspondiente al amanecer (negativo según el criterio
+el ángulo correspondiente al amanecer\footnote{En otras referencias bibliográficas se emplea el ángulo correspondiente al atardecer, y por tanto es necesario tener la precaución de cambiar el signo al comparar cálculos.} (negativo según el criterio
 de signos) es:
 
 \begin{equation}
