--- a/libro/RadiacionSolar.tex
+++ b/libro/RadiacionSolar.tex
@@ -437,7 +437,7 @@ a partir de las ecuaciones \ref{eq:Bo0} y \ref{eq:Bo0d}:
 \begin{equation}
   \frac{B_{o}(0)}{B_{0d}(0)}=\frac{\pi}{T}\cdot\frac{\cos(\omega)-\cos(\omega_{s})}{\omega_{s}\cdot\cos(\omega_{s})-\sin(\omega_{s})}\label{eq:RelacionExtraAtmosferica}\end{equation}
 donde $T$ es la duración del día en horas, $\omega_s$ está expresado en
-radianes y $\omega$ corresponde
+radianes\footnote{En la publicación original se define $\omega_s$ como el ángulo del atardecer, y por tanto con signo positivo. Consecuentemente todas las ecuaciones que se incluyen a continuación tienen los signos cambiados respecto de ese artículo.} y $\omega$ corresponde
 al instante central de la hora correspondiente.
 
 El mismo análisis mostró una relación entre la irradiancia e irradiación
